--- a/novaElysium/src/main/resources/application.properties
+++ b/novaElysium/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=novaElysium
+
+server.port = 9193
+spring.datasource.url = jdbc:mysql://localhost:3306/Kart_db
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_Sql= true
+spring.jpa.hibernate.ddl-auto=update
+
+
